# vertcoin-core

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  good_first_issue.md
build-aux/m4/: gmp.m4
contrib/builder-keys/: README.md  keys.txt
contrib/debian/: README.md  changelog  control  copyright  rules  vertcoin-qt.desktop  vertcoin-qt.install  vertcoin-qt.lintian-overrides  vertcoin-qt.manpages  (+11 more)
depends/: Makefile  README.md  config.site.in
doc/: README.md  README_windows.txt  build-osx.md  build-unix.md  build-windows.md  dependencies.md  release-notes.md
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-wallet.1  bitcoind.1  vertcoin-cli.1  vertcoin-qt.1  vertcoin-tx.1  vertcoin-util.1  vertcoin-wallet.1  vertcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.qt.include  Makefile.test.include  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.h  dbwrapper.cpp  headerssync.h  httpserver.cpp  init.cpp  init.h  key.cpp  miner.cpp  miner.h  net.cpp  net.h  net_processing.cpp  pow.cpp  (+16 more)
(+384 files in other folders)
