dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=vertcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=vertcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=vertcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=vertcoin-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=vertcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=vertcoin-wallet.1
endif
endif
